<resources>
    <string name="app_name">Ouders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello,</string>
    <string name="user_name">User Name</string>
    <string name="article">Article</string>
    <string name="games">Games</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="notifyOn">Notification Enabled</string>
    <string name="notifyOff">Notification Disabled</string>
    <string name="dailyNotify">Comeback</string>
    <string name="whatsap">Whatsaap</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="article_title">Article Title</string>
    <string name="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="consul_name">Consul Name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="change_photo">Change Photo</string>
    <string name="under_development">Under Development</string>
    <string name="phone_number">Phone Number</string>
    <string name="input_phone_number">Input your phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="v1_0">V1.0</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="there_is_no_phone_number">There is no phone number</string>
    <string name="welcome">Welcome</string>
    <string name="consultation">Consultation</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="play_games_with_your_kids_to_grow_relation">Play games with your kids to grow relation.</string>
    <string name="read_related_article_to_increase_your_knowledge_on_parenting">Read related article to increase your knowledge on parenting.</string>
    <string name="consult_your_problem_to_the_experts_with_whatsapp">Consult your problem to the experts with whatsapp.</string>
    <string name="ouders_will_help_you_to_grow_you_parenting_habbit">Ouders will help you to grow you parenting habbit</string>
    <string name="okay">Okay</string>
</resources>