<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_lighter"
    android:padding="@dimen/fab_margin"
    tools:context=".ui.profile.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:civ_border_color="@color/pink_darker"
                app:civ_border_width="5dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_photo" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/changePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/change_photo" />
        </FrameLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fab_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_input"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_your_new_username"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_input"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_input"
                    android:ems="10"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:inputType="phone"
                    android:hint="@string/enter_your_phone_number"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pink_dark"
            android:text="@string/save"
            android:textColor="@color/pink_lighter"
            app:layout_constraintTop_toBottomOf="@id/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>